--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	
 	<groupId>com.github.vindell</groupId>
 	<artifactId>metrics-resteasy</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	
 	<name>Metrics Resteasy Integration</name>
 	<description>Metrics Integration for Resteasy</description>
@@ -16,23 +16,39 @@
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
 			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
 		</license>
 	</licenses>
 
 	<scm>
-		<connection>scm:git:git@github.com:vindell/${project.artifactId}.git</connection>
-		<developerConnection>scm:git:git@github.com:vindell/${project.artifactId}.git</developerConnection>
-		<url>git@github.com:vindell/${project.artifactId}.git</url>
+		<connection>scm:git:https:github.com/vindell/${project.artifactId}.git</connection>
+		<developerConnection>scm:git:https:github.com/vindell/${project.artifactId}.git</developerConnection>
+		<url>https:github.com/vindell/${project.artifactId}</url>
+		<tag>${project.artifactId}</tag>
 	</scm>
 
 	<developers>
 		<developer>
-			<id>001</id>
 			<name>vindell</name>
 			<email>hnxyhcwdl1003@163.com</email>
+			<roles>
+				<role>developer</role>
+			</roles>
+			<timezone>+8</timezone>
 		</developer>
 	</developers>
+
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<name>Maven Snapshots Repository</name>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+		    <id>ossrh</id>
+			<name>Maven Central Staging Repository</name>
+		    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		  </repository>
+	</distributionManagement>
 
 	<build>
 		<pluginManagement>
