修改版权信息

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	
 	<name>Metrics Resteasy Integration</name>
 	<description>Metrics Integration for Resteasy</description>
-	<url>https://github.com/vindell/metrics-resteasy</url>
+	<url>https://github.com/hiwepy/metrics-resteasy</url>
 	<packaging>jar</packaging>
 
 	<licenses>
@@ -20,9 +20,9 @@
 	</licenses>
 
 	<scm>
-		<connection>scm:git:https:github.com/vindell/${project.artifactId}.git</connection>
-		<developerConnection>scm:git:https:github.com/vindell/${project.artifactId}.git</developerConnection>
-		<url>https:github.com/vindell/${project.artifactId}</url>
+		<connection>scm:git:https:github.com/hiwepy/${project.artifactId}.git</connection>
+		<developerConnection>scm:git:https:github.com/hiwepy/${project.artifactId}.git</developerConnection>
+		<url>https:github.com/hiwepy/${project.artifactId}</url>
 		<tag>${project.artifactId}</tag>
 	</scm>
 
